# AoC2025

./: .gitignore  CMakeLists.txt
Day1/: d1_p1.cpp  d1_p2.cpp
Day2/: d2_p1.cpp  d2_p2.cpp
Day2/Part1/: d2_p1.cpp
Day3/: d3_p1.cpp  d3_p2.cpp
Day3/Part1/: d3_p1.cpp
Day4/: d4_p1.cpp  d4_p2.cpp
Day5/: d5_p1.cpp  d5_p2.cpp
Day6/: d6_p1.cpp  d6_p2.cpp
Day7/: d7_p1.cpp  d7_p2.cpp
Day8/: d8_p1.cpp  d8_p2.cpp
Day9/: d9_p1.cpp  d9_p2.cpp
includes/: Junction.h  Matrix.cpp  Matrix.h  UnionFind.cpp  UnionFind.h
